name:             ninjaturdle
version:          1.0
synopsis:         Ninja Turdle Development Site
homepage:         http://ninjaturdle.com
author:           Kenneth Cason
maintainer:       kenneth.cason@gmail.com
category:         Web
build-type:       Custom
cabal-version:    >=1.8

executable site
  hs-source-dirs: src/
  main-is:        Main.hs
  ghc-options:    -O2 -Wall -threaded

  build-depends:
    base      >= 4.6  && < 4.9,
    binary    >= 0.5  && < 0.8,
    directory >= 1.2  && < 1.3,
    filepath  >= 1.3  && < 1.5,
    hakyll    >= 4.7  && < 4.8,
    monads-tf == 0.1.0.2,
    pandoc    >= 1.14 && < 1.17,
    process   >= 1.1  && < 1.3,
    random    == 1.1,
    text      == 1.2.2.0,
    utf8-string == 1.0.1.1
